--- a/src/style.css
+++ b/src/style.css
@@ -31,3 +31,12 @@ main {
     margin-left: 5rem;
     padding: 1rem;
 }
+
+
+@media only screen and (max-width: 600px){
+
+}
+
+@media only screen and (min-width: 600px) {
+    
+}
