--- a/src/pages/education/education.css
+++ b/src/pages/education/education.css
@@ -1,107 +1,28 @@
-.imgHeader {
-    position: absolute;
-    top: 40%;
-    left: 40%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-}
-
-/*
-.imgContainer {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-*/
-.roadmap {
-    margin: auto;
-    display: block;
-}
-
-.blob {
-    position: absolute;
-    top:5vh;
-    left:10vw;
-    width: 50vw;
-    height: 50vh;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    background-color: var(--background-primary);
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.column {
-    float: left;
-    height: 100vh;
-}
-
-.left, .right {
-    width: 25%;
-}
-  
-.middle {
-    width: 50%;
+.flex-container-education {
     display: flex;
-    justify-content: center;
-}
-  
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.alignRight {
-	float: right;
-}
-
-.alignLeft {
-	float: left;
-}
-
-.clear {
-    clear: both;
-}
-
-.education-header {
-    text-align: center;
-    padding: 5vh;
-}
-
-.svg-profile {
-    width: 2.5%;
-    height: 2.5%;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
-    color: var(--button);
-    filter: grayscale(25%) opacity(0.7);
-}
-
-.svg-profile:hover {
-    filter: grayscale(25%) opacity(1);
-}
-
-.contact-wrapper {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-}
-
-.svg-wrapper {
+    flex-direction: column;
+    margin: 5vw;
     text-align: center;
 }
 
-.contact-header {
-    text-align: center;
+.flex-container-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-container-item {
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+.container {
+    display: flex;
+    flex-direction: row;
+}
+
+.left {
+    flex: 50%;
+}
+
+.right {
+    flex: 50%;
 }
