--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,64 +1,55 @@
+.home-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
 .header {
     text-align: center;
 }
 
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    background-color: var(--background-primary);
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    margin: 10vw;
 }
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.flex-item-left {
+    flex: 50%;
 }
 
-.container {
-    padding: 2px 16px;
+.flex-item-right {
+    flex: 50%;
 }
 
-.grid-box {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+ul {
+    list-style-type: none;
+    display: inline-block;
 }
 
-.svg-profile {
-    width: 2.5%;
-    height: 2.5%;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
-    color: var(--button);
-    filter: grayscale(25%) opacity(0.7);
+.right-list {
+    margin-left: 30%;
 }
 
-.svg-profile:hover {
-    filter: grayscale(25%) opacity(1);
+.left-list {
+    margin-right: 30%;
 }
 
-.contact-wrapper {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+@media (max-width: 520px) {
+    .flex-container {
+        flex-direction: column;
+    }
+
+    .right-list {
+        margin-left: 0%;
+    }
+    
+    .left-list {
+        margin-right: 0%;
+    }
 }
 
-.svg-wrapper {
-    text-align: center;
+@media (max-width: 1500px) {
+    .flex-container {
+        flex-direction: column;
+    }
 }
-
-.contact-header {
-    text-align: center;
-}
-
-.header-wrapper {
-    margin-top: 5vh;
-    margin-bottom: 10vh;
-}
-
-.carousel-wrapper {
-    margin: 3vh;
-}
-
-
-
-
