--- a/src/pages/skills/skills.css
+++ b/src/pages/skills/skills.css
@@ -1,26 +1,10 @@
-button {
-    border: none;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-}
-
-button:hover {
-    background-color: #ddd;
+.flex-container-skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: xx-large;
+    margin-left: 10vw;
+    margin-right: 10vw;
 }
 
 
-.grid-box {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
